--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "puppeteer",
+  "name": "puppeteer-core",
   "version": "1.9.0",
   "description": "A high-level API to control headless Chrome over the DevTools Protocol",
   "main": "index.js",
